--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <html>
-<p>👨‍💻 Loading...</p>
-<p>StayTuned!</p>
+    <style>
+        .t1 {
+            /*font-family: sans ;*/
+            size-adjust: auto;
+            text-align: center;
+            padding-top: 3cm;
+        }
+    </style>
+<title> ASH | Loading... </title>
+<head>
+<h1 class="t1">👨‍💻 Loading...</h1>
+  <p>StayTuned!</p>
+</head>
 </html>
