--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <html>
     <style>
-        .t1 {
+        .t {
             /*font-family: sans ;*/
-            size-adjust: auto;
+            /*size-adjust: auto;*/
             text-align: center;
             padding-top: 3cm;
         }
     </style>
 <title> ASH | Loading... </title>
 <head>
-<h1 class="t1">👨‍💻 Loading...</h1>
-  <p>StayTuned!</p>
+<h1 class="t">👨‍💻 Loading...</h1>
+  <p class="t">StayTuned!</p>
 </head>
 </html>
